--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,9 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.17</version>
                 <executions>
