add live client and updateStatus msg

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,4 +1,5 @@
 e-clearing.enabled=true
 e-clearing.service-uri="http://localhost:8088/mockeCHS-OCHP_1.2"
+e-clearing.live-service-uri="http://localhost:8088/mockeCHS-OCHP_1.2/live"
 e-clearing.user="backend.tnm"
 e-clearing.password="Malt3Z3r?"
