add helper class for eclearing integration phase

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>com/thenewmotion/chargenetwork/eclearing/client/EclearingIntegrationTestsSpec.class</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
