--- a/pom.xml
+++ b/pom.xml
@@ -138,13 +138,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--plugin>
+            <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.1</version>
                 <configuration>
-                    <maxmemory>800m</maxmemory>
+                    <skip>true</skip>
                 </configuration>
-            </plugin-->
+            </plugin>
         </plugins>
     </build>
 </project>
