--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
     <parent>
         <groupId>com.thenewmotion</groupId>
-        <artifactId>scala-parent-pom_2.10</artifactId>
-        <version>2.9</version>
+        <artifactId>scala-parent-pom_2.11</artifactId>
+        <version>2.10</version>
     </parent>
 
     <groupId>com.thenewmotion.chargenetwork</groupId>
-    <artifactId>e-clearing-client_ochp-1.2_2.10</artifactId>
+    <artifactId>e-clearing-client_ochp-1.2_2.11</artifactId>
     <version>1.14-SNAPSHOT</version>
 
     <name>e-clearing Client, OCHP 1.2</name>
@@ -46,17 +46,12 @@
         <dependency>
             <groupId>com.thenewmotion</groupId>
             <artifactId>time_${scala.version}</artifactId>
-            <version>2.1</version>
+            <version>2.8</version>
         </dependency>
         <dependency>
-            <groupId>ua.t3hnar.scalax</groupId>
-            <artifactId>scalax_${scala.version}</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>scalalogging-slf4j_${scala.version}</artifactId>
-            <version>1.0.1</version>
+            <groupId>com.typesafe.scala-logging</groupId>
+            <artifactId>scala-logging-slf4j_${scala.version}</artifactId>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe</groupId>
