--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,4 +1,6 @@
-e-clearing.service-uri=""
-e-clearing.live-service-uri=""
-e-clearing.user=""
-e-clearing.password=""
+ochp {
+  service-uri=""
+  live-service-uri=""
+  user=""
+  password=""
+}
